# Karachi-AQI-Prediction

./: .gitignore  .slugignore  Dockerfile  README.md  debug_predictions.py  inspect_model.py  nixpacks.toml  packages.txt  pyproject.toml  requirements.txt  start.sh
.github/workflows/: daily_training_pipeline.yml  hourly_feature_pipeline.yml
.ipynb_checkpoints/: eda-checkpoint.ipynb
data/raw/: data.csv
models/: model.pkl  scaler_X.pkl  scaler_features.pkl  scaler_target.pkl  scaler_y.pkl
notebooks/: eda.ipynb  shap-analysis.ipynb
scripts/: data_fetching.py  feature_pipeline.py  main.py  model_training.py  training_pipeline.py
src/: core.py  utils.py
src/api/: main.py  prediction_service.py
src/backend/: main.py  prediction_service.py
src/frontend/: app.py
src/pipeline/: feature_pipeline.py  training_pipeline.py
